--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.1",
     "sass": "^1.42.1"
+  },
+  "dependencies": {
+    "git": "^0.1.5",
+    "live-server": "^1.2.1"
   }
 }
